--- a/style.css
+++ b/style.css
@@ -35,3 +35,14 @@ body{
     margin-right: 25px;
 }
 
+.displayNone{
+    display:none;
+}
+
+#main-forms-container{
+
+}
+
+footer{
+    width: 100%;
+}
