fixed image widgth issue for result on mobile by adding dynamic css class to img

--- a/style.css
+++ b/style.css
@@ -39,10 +39,11 @@ body{
     display:none;
 }
 
-#main-forms-container{
-
-}
 
 footer{
     width: 100%;
+}
+
+.image-width{
+    max-width: 80% !important;
 }
