--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@ body{
 }
 
 #results-recipe-row{
-    padding:0;
+    padding-top:0;
+    padding-left:0px;
+    padding-right: 0px;
+    padding-bottom: 20px;
 }
 
 #results-recipe-col{
@@ -67,4 +70,8 @@ footer{
 .card{
     padding-top: 5px;
     padding-bottom: 15px;
+}
+
+#footer{
+    width: 100%;
 }
