auto scroll to results on search, started variable refactoring

--- a/style.css
+++ b/style.css
@@ -72,6 +72,13 @@ footer{
     padding-bottom: 15px;
 }
 
+#recipeHeader {
+    padding-left:30px;
+    padding-right: 30px;
+
+
+}
+
 #footer{
     width: 100%;
 }
