--- a/style.css
+++ b/style.css
@@ -75,8 +75,10 @@ footer{
 #recipeHeader {
     padding-left:30px;
     padding-right: 30px;
+}
 
-
+#header-text{
+    padding-left:40px;
 }
 
 #footer{
