--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
 body{
     background-color:white;
+    margin: 15px;
+}
+@media (max-width:414px){
+    body{
+        margin:5px;
+
+    }
+}
+
+#main-row{
+    margin-top:50px;
+}
+@media (max-width:414px){
+    #main-row{
+        margin-top: 15px;
+    }
 }
 
 
@@ -24,7 +40,7 @@ body{
 }
 
 #search-card{
-    padding: 10px;
+    /* padding: 10px; */
     
 }
 
@@ -67,7 +83,7 @@ footer{
     margin-bottom:0;
 }
 
-.card{
+.results-card{
     padding-top: 5px;
     padding-bottom: 15px;
 }
