--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     background-color:white;
+    background-image:url(./images/kitchen\ gradient\ 3.jpg);
+    background-repeat: repeat-x;
     margin: 15px;
 }
 @media (max-width:414px){
