--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 @media (max-width:414px){
     body{
         margin:5px;
+        padding-top:5px;
 
     }
 }
@@ -69,6 +70,12 @@ body{
 
 #card-col{
     margin-top: 25px; 
+}
+
+@media (max-width:414px){
+    #card-col{
+        margin-top:5px;
+    }
 }
 
 .checkbox-item{
