--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color:white;
+    background-color:rgb(187, 187, 187);
     background-image:url(./images/kitchen\ gradient\ 3.jpg);
     background-repeat: repeat-x;
     margin: 15px;
@@ -37,7 +37,7 @@ body{
 }}
 
 .title-text{
-    margin-top:25px;
+    margin-top:45px;
 }
 
 @media (max-width:500px){
